--- a/learning_logs/20250903.md
+++ b/learning_logs/20250903.md
@@ -5,3 +5,107 @@
 설정 -> ctrl + alt + s
 Editor -> General에서 soft wrap 체크(자동 줄바꿈 지원)
 ch00_starting 디렉토리 생성
+
+설정 -> ctrl + alt + s
+Editor -> General에서 soft wrap 체크(자동 줄바꿈 지원) + *.py 추가
+
+# Reeborg's World hurdle
+```python
+# Reeborg's World hurdle #1
+def turn_right() : 
+    for i in range(3):
+        turn_left()
+
+def go() : 
+    while wall_on_right() and front_is_clear():
+        move()
+        
+def jump() :
+    turn_left()
+    go()
+    for j in  range(2):
+        turn_right()   
+        move()
+    go()
+    turn_left()
+
+for i in range(6)
+    jump()
+
+# Reeborg's World hurdle #2
+while not at_goal():
+    if front_is_clear():
+        move()
+    else :
+        jump()
+
+# Reeborg's World hurdle #3
+while not at_goal():
+    goal()
+
+# Reeborg's World hurdle #4
+def turn_right() : 
+    for i in range(3):
+        turn_left()
+
+def go() : 
+    while wall_on_right() and front_is_clear():
+        move()
+        
+def jump() :
+    turn_left()
+    go()
+    for j in  range(2):
+        turn_right()   
+        move()
+    go()
+    turn_left()
+    
+def goal():
+    if front_is_clear():
+        move()
+    else :
+        jump()
+    
+while not at_goal():
+    goal()
+
+# 우수법
+def turn_right() : 
+    for i in range(3):
+        turn_left()
+
+
+while not at_goal():
+    if wall_on_right() : 
+        if front_is_clear():
+            move()
+        else : 
+            turn_left()
+    else:
+        turn_right()
+        move()
+
+```
+# 실습 링크
+https://reeborg.ca/reeborg.html?lang=en&mode=python&menu=worlds%2Fmenus%2Freeborg_intro_en.json&name=Maze&url=worlds%2Ftutorial_en%2Fmaze1.json
+
+이상의 과제에서 수업으로 직접으로 말하지 않았지만 알 수 있는 점
+1. 함수의 호출
+2. 사용자 정의 함수
+```python
+def 함수명() : 
+    실행문
+# 얘는 call1() 유형이겠네요
+```
+3. turn_right()의 예시에서 알 수 있듯이
+    turn_right()의 내부에서는 세 번의 turn_left()가 있는 것으로 봤을 때, 함수 내에서 함수를 호출하는 것이 가능하다.
+4. 횟수가 고정 되어있을 때는 -> for문
+5. 횟수가 고정되어 있지 않고 조건에 기반할 때는 -> while문
+
+ch03_indexing 패키지 생성 -> main
+
+# 금일 수업 내용 관련
+1. python 설정 -> pycharm 설치부터 프로젝트 생성 까지
+2. 변수 / 조건문 / 반복문 / 함수
+
