feat : 20250909 python test day

--- a/learning_logs/20250908.md
+++ b/learning_logs/20250908.md
@@ -21,10 +21,10 @@ class Student :
       - 이런 변수는 일반적으로 `@property` 데코레이터를 사용한 getter와 setter를 경유하여 간접적으로 접근하는 것이 올바른 방법.
 
 # JPA에서의 객체 생성 vs. python에서의 객체 생성
-JPA(Java Persistence API)를 사용한 Java에서는 기본 생성자를 강제합니다.(springboot에서도 적용됩니다.) 그런데 python에서는 매개변수 생성자를 '권장'하는데, 이는 두 언어 간의 객체지향 패로다임과 데이터 관리 방식의 차이에 기인합니다.
+JPA(Java Persistence API)를 사용한 Java에서는 기본 생성자를 강제합니다.(springboot에서도 적용됩니다.) 그런데 python에서는 매개변수 생성자를 '권장'하는데, 이는 두 언어 간의 객체지향 패러다임과 데이터 관리 방식의 차이에 기인합니다.
 
 1. Java(JPA)에서의 기본 생성자
-   - JPA는 DB의 테이블과 (앤티티) 클래스를 매핑하여 객체를 관히합니다.( 추후 수업할 거지만 제가 이미 이야기한대로라면 엔티티 클래스의 dield가 DB에서의 컬러몀이 된다고 했었습니다.) 이 과정에서 JPA가 지가 직접 매개변수를 알 수 었기 때문에 매개변수가 ㅇ벗는 기본 생성자를 먼저 호출하여 객체를 생성하고, DB에서의 컬럼 값들을 하나씩 필드에 집어넣어줍니다. 이상을 이유로 JPA는 데이터 관리의 일관성과 효율성을 위해 기본생성자를 강제합니다.
+   - JPA는 DB의 테이블과 (앤티티) 클래스를 매핑하여 객체를 관히합니다.( 추후 수업할 거지만 제가 이미 이야기한대로라면 엔티티 클래스의 dield가 DB에서의 컬러몀이 된다고 했었습니다.) 이 과정에서 JPA가 지가 직접 매개변수를 알 수 었기 때문에 매개변수가 없는 기본 생성자를 먼저 호출하여 객체를 생성하고, DB에서의 컬럼 값들을 하나씩 필드에 집어넣어줍니다. 이상을 이유로 JPA는 데이터 관리의 일관성과 효율성을 위해 기본생성자를 강제합니다.
 
 ```java
 @Entity
